# zmux

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: SHORTCUT.md
docs/diagrams/: generate_shortcut_quickstart.py  shortcut-quickstart-philosophy.md  shortcut-quickstart-repro.md
src/: copy_mode.rs  lib.rs  main.rs
src/client/: mod.rs  render.rs  socket.rs
src/commands/: mod.rs
src/config/: mod.rs
src/ipc/: mod.rs  protocol.rs  unix.rs  windows.rs
src/layout/: frame.rs  mod.rs  rect.rs  serializer.rs  tree.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/pty/: mod.rs
src/server/: mod.rs
src/style/: mod.rs
src/types/: events.rs  history.rs  layout.rs  mod.rs  mode.rs  options.rs  session.rs
