[package]
name = "zmux"
version = "0.2.0"
edition = "2021"
description = "Cross-platform terminal multiplexer"
license = "MIT"

[[bin]]
name = "zmux"
path = "src/main.rs"

[dependencies]
portable-pty = "0.9"
ratatui = "0.30"
crossterm = "0.29"
vt100 = "0.16"
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
arboard = "3"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process", "fs", "term"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_System_DataExchange",
    "Win32_Security",
    "Win32_Storage_FileSystem",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
